plugins {
    id 'java'
}

repositories {
    mavenCentral()
}

ext.junitJupiterVersion = '5.6.0'
ext.jqwikVersion = '1.2.4'

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

compileTestJava {
    options.compilerArgs += '-parameters'
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()

    include '**/*Properties.class'
    include '**/*Test.class'
    include '**/*Tests.class'
}

dependencies {
    testImplementation("org.assertj:assertj-core:3.12.2")
    testImplementation("net.jqwik:jqwik:${jqwikVersion}")
    testImplementation("org.junit.jupiter:junit-jupiter:${junitJupiterVersion}")
}

wrapper {
    description = 'Generates gradlew[.bat] scripts'
    gradleVersion = '6.2.2'
}
